# ssao

./: .gitignore
doc/ai/: SSAO Diagram.ai  scketches.ai
doc/article/: SSAO.aux  SSAO.blg  SSAO.tcp  SSAO.tex  SSAO.tps
doc/reference/: DepthBufferBasedAmbientOcclusion.ppt
launchers/win/: launch_ssao_mol.bat  launch_ssao_mol_ssao.bat  launch_ssao_mol_trace_frag_anim.bat  launch_ssao_per_frag2_optimal.bat  launch_ssao_per_frag2_optimal_high_res_mrt.bat  (+4 more)
src/: .manipulator.cpp.swp  CMakeLists.txt  FirstPersonManipulator.cpp  FirstPersonManipulator.h  deferred.cpp  main.cpp  manipulator.cpp  manipulator.h  posnormal_mrt_shaders.h  ssao.cpp  ssao.h  ssao2.frag  ssao_original_version.cpp  texture_preprocess.h
src/launchers/: launch_ssao_mol_trace_frag.bat  launch_ssao_per_frag2_ssao_only_optimal.bat  launch_ssao_per_frag2_texture_optimal_manip.bat  launch_ssao_per_vert2_optimal.bat  launch_ssao_per_vert2_optimal_low_freq_high_res_mrt.bat
src/shaders/: anim_ssao_trace_per_vert3.vert  ssao2.vert  ssao_in_vertex_shader.frag  ssao_in_vertex_shader.vert  ssao_simple.frag  ssao_simple.vert  ssao_trace_per_frag2_optimal.frag  ssao_trace_per_frag2_optimal.vert  ssao_trace_per_vert2_optimal.frag  ssao_trace_per_vert2_optimal.vert
src/testshaders/: deferred.frag  deferred.vert  iso.frag  iso.vert  ssao.frag  ssao3.vert  ssao_deferred.frag  ssao_deferred.vert  ssao_simple_shading.frag  ssao_trace.frag  ssao_trace.vert  ssao_trace2.vert  ssao_trace2_WORKING.vert  ssao_trace2_perfect_except_molecules.vert  ssao_trace3.frag  ssao_trace3.vert  ssao_trace_per_frag.frag  ssao_trace_per_frag.vert
test/: ssao_trace_per_frag2_1.xcf  ssao_trace_per_frag2_2.xcf  ssao_trace_per_frag2_3.xcf
(+9 files in other folders)
